@@ -1,6 +1,7 @@
 0.188
 
 - Fix IndexOutOfBounds when updating t-digest after copy.
+- Limit total size of server.log.
 - Remove status message support from HTTP client.
 - Update to Jetty 9.4.24.v20191120.
 
